fix(collectables): better alignment for easier reading

--- a/apps/client/src/app/pages/collectables/collectables/collectables.component.less
+++ b/apps/client/src/app/pages/collectables/collectables/collectables.component.less
@@ -1,3 +1,11 @@
+:host ::ng-deep {
+  .ant-tabs-tab {
+    width: 124px;
+    margin: 0 16px 0 0;
+    padding-left: 11px;
+  }
+}
+
 .job-icon {
   width: 16px;
 }
